--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   audio_service: ^0.18.0
+  just_audio: ^0.9.13
 
 dev_dependencies:
   flutter_test:
